# Flexget

./: .codeclimate.yml  .config-lock  .dockerignore  .gitattributes  .gitignore  .isort.cfg  .landscape.yml  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CONTRIBUTING.md  Dockerfile  ISSUE_TEMPLATE.md  LICENSE  MANIFEST.in  README  README.MD  README.rst  bootstrap.py  build.py  build_locked_extras.py  bundle_webui.py  config-161123191517.bak  config-161123191604.bak  config-example.yml  dev-requirements-extras.txt  dev-requirements.in  dev-requirements.txt  dev_tools.py  docker-bake.hcl  example.yml  feed.py  flexget.py  flexget_vanilla.py  gen-changelog.py  jenkins-requirements.txt  manager.py  optional-requirements.txt  pavement.py  pip-selfcheck.json  (+26 more)
.circleci/: README.rst  config.yml  coverage.sh  release.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  RELEASE.md  codecov.yml  dependabot.yml  renovate.json5  stale.yml  zizmor.yml
.github/ISSUE_TEMPLATE/: 1-bug.yml  2-enhancement.yml  2-feature.yml  3-task.yml  bug_report.md  config.yml
.github/workflows/: autofix.yml  changelog.yml  close-pr.yml  docker-image.yml  linter.yml  main.yml  nightly.yml  no-prs-to-master.yml  release.yml  release_and_publish.yml  renovate-config-validation.yml  run_tests.yml  stale.yml  test.yml  tests_and_release.yml  uv-lock.yml  zizmor.yml
BeautifulSoup-3.0.7a/: BeautifulSoupTests.py  PKG-INFO
Docker/: Dockerfile  config.yml  start.sh
doc/: reduce.sh
docs/: Makefile  conf.py  index.rst  make.bat  requirements.txt
docs/_extensions/: gallery_directive.py
docs/_static/: collaborators.yaml  custom-icon.js  custom.css  switcher.json
docs/api/: flexget.plugins.cli.rst  flexget.plugins.generic.rst  flexget.plugins.input.rst  flexget.plugins.operate.rst  flexget.plugins.output.rst  flexget.plugins.services.rst  flexget.plugins.start.rst  flexget.rst  flexget.utils.rst  flexget.utils.titles.rst  modules.rst
docs/contributor/: index.rst
docs/develop/: database.rst  develop.rst  index.rst  list_interface.rst  mock.rst  schemas.rst  tdd.rst
docs/plugins/: flexget.plugins.download.rst  flexget.plugins.exit.rst  flexget.plugins.filter.rst  flexget.plugins.generic.rst  flexget.plugins.input.rst  flexget.plugins.local.rst  flexget.plugins.metainfo.rst  flexget.plugins.modify.rst  flexget.plugins.operate.rst  flexget.plugins.output.rst  flexget.plugins.rst  flexget.plugins.services.rst
etc/: base.dockerfile  final.dockerfile
flexget/: __init__.py  _version.py  api.py  bencode.py  cli.py  click_entry.py  config_schema.py  db_schema.py  entry.py  event.py  feed.py  ipc.py  log.py  logger.py  manager.py  notifier.py  options.py  plugin.py  scheduler.py  schema.py  task.py  task_queue.py  terminal.py  tray_icon.py  validator.py  version.py  webserver.py  webui.py  yaml_config.py  yaml_helper.py
modules/: TODO_module_email.py  filter_accept.py  filter_exists.py  filter_ignore.py  filter_imdb.py  filter_limit_new.py  filter_patterns.py  filter_regexp.py  filter_seen.py  filter_seen_movies.py  filter_series.py  filter_test.py  filter_torrent_size.py  filter_unconditionally.py  input_csv.py  input_html.py  input_mock.py  input_nbc.py  input_rlslog.py  input_rss.py  input_scenereleases.py  input_test.py  input_text.py  input_tvtorrents.py  modify_btchat.py  modify_extension.py  modify_torrent.py  modify_trackers.py  module_cli_config.py  module_cookies.py  module_disable_builtins.py  module_headers.py  module_interval.py  module_path_by_ext.py  module_preset.py  module_priority.py  module_resolver.py  module_scan_imdb.py  module_search.py  module_spy_headers.py  (+24 more)
plugins/: filter_accept_all.py  filter_delay.py  filter_exists.py  filter_imdb.py  filter_limit_new.py  filter_regexp.py  filter_seen.py  filter_series.py  filter_torrent_size.py  input_backlog.py  input_formlogin.py  input_html.py  input_mock.py  input_rlslog.py  input_rss.py  input_scenereleases.py  input_text.py  input_tvtorrents.py  modify_extension.py  modify_headers.py  modify_set.py  modify_torrent.py  modify_trackers.py  module_cli_config.py  module_cookies.py  module_disable_builtins.py  module_formlogin.py  module_headers.py  module_interval.py  module_path_by_ext.py  module_preset.py  module_priority.py  module_resolver.py  module_scan_imdb.py  module_search.py  module_spy_headers.py  module_try_regexp.py  output_deluge.py  output_download.py  output_dump.py  (+16 more)
requirements/: cloudscraper.txt  deluge.txt  dev.txt  docs.txt  qbittorrent.txt  telegram.txt  transmission.txt
scripts/: build_locked_extras.py  bundle_webui.py  dev_tools.py  release.sh  update_changelog.py
templates/: default.template  index.html  modules.html  test.yml
test/: README  __init__.py  disable_builtins.yml  download.yml  html.yml  imdb.yml  regexp.yml  rss.yml  scan_imdb.yml  scenereleases.yml  seen.yml  series.yml  subtitles.yml  test_disable_builtins.yml  test_download.yml  test_imdb.yml  test_patterns.yml  test_regexp.yml  test_resolvers.yml  test_rss.yml  test_rss_online.yml  test_scan_imdb.yml  test_seen.yml  test_seen_movies.yml  test_series.yml
tests/: LICENSE.torrent  README  __init__.py  config_utf8.yml  conftest.py  cookies.txt  couchpotato_movie_list_test_response.json  couchpotato_quality_profile_test_response.json  couchpotoato_movie_list_test_response.json  couchpotoato_test_reponse.json  data_charts_snep.html  exec.py  logging.cfg  multi.torrent  rss.xml  rss_escape.xml  secret.yml  series.mkv  setup.cfg  test.torrent  test_abort.py  test_abort_if_exists.py  test_api.py  test_archives.py  test_argparse.py  test_asciify.py  test_assume_quality.py  test_backlog.py  test_best_quality.py  test_cached_input.py  test_charted.py  test_charts.py  test_charts_snep_input.py  test_condition.py  test_config.py  test_config_schema.py  test_configure_alt_name.py  test_configure_series_betaseries_list.py  test_connector_snep.py  test_content_filter.py  (+140 more)
utils/: html.py  imdb.py  log.py  serieparser.py  series.py  simple_persistence.py  tools.py
(+3313 files in other folders)
