## Build settings
[project]
name = "flexget"
description = """\
    FlexGet is a program aimed to automate downloading or processing content (torrents, podcasts, etc.) from \
    different sources like RSS-feeds, html-pages, various sites and more.\
"""
readme = "README.rst"
requires-python = ">=3.9"
authors = [
    { name = "Marko Koivusalo", email = "marko.koivusalo@gmail.com" },
    { name = "Chase Sterling", email = "chase.sterling@gmail.com" },
]
license = { file = "LICENSE" }
dynamic = ["version", "optional-dependencies"]
dependencies = [
    "apscheduler ~=3.11",
    "beautifulsoup4 ~=4.12",
    "feedparser ~=6.0",
    "guessit ~=3.8",
    "html5lib ~=1.1",
    "importlib-metadata ~=8.5; python_version <'3.10'", # TODO: remove this after we drop python3.9
    "jinja2 ~=3.1",
    "jsonschema ~=4.23",
    "loguru ~=0.7.3",
    "packaging ~=24.2",
    "pendulum ~=3.0",
    "psutil ~=7.0",
    "pynzb ~=0.1.0",
    "pyrss2gen ~=1.1",
    "python-dateutil ~=2.9",
    "pyyaml ~=6.0",
    "rebulk ~=3.2",
    "requests ~=2.32",
    "rich ~=13.9",
    "rpyc ~=6.0",
    "sqlalchemy ~=2.0",
    # TODO: urllib3 >=2 has changes that require vcr cassettes to be upgraded. Requirements of some of our deps (boto?)
    # require urllib3 <2 on python < 3.10. In order to not be running different versions of urllib on different
    # versions of python, this is pinned in our deps. This can be removed completely if the issue gets solved.
    # https://github.com/kevin1024/vcrpy/issues/719
    "urllib3 ~=1.26",
    # WebUI/API Deps
    "cherrypy ~=18.10",
    "flask-compress ~=1.17",
    "flask-cors ~=5.0",
    "flask-login ~=0.6.3",
    "flask-restx ~=1.3",
    "flask ~=3.1",
    "pyparsing ~=3.2",
    "werkzeug ~=3.1",
    "zxcvbn ~=4.4",
]
[dependency-groups]
dev = [
    "pre-commit ~=4.0",
    "pytest ~=8.3",
    "pytest-xdist ~=3.6",
    "ruff ~=0.9.0",
    "vcrpy ~=7.0",
]
plugin-test = [
    # These are optional dependencies for plugins that have tests in the test suite
    # Tests that need these must add the `requires_optional_deps` pytest mark
    "boto3 ~=1.35",
    'rarfile~=4.0',
    "pillow~=11.0",
    "plexapi ~=4.16",
    "pysftp ~=0.2.9",
    "subliminal ~= 2.1",
    { include-group = "telegram" },
    { include-group = "transmission" }
]
deluge = ['deluge-client~=1.10']
qbittorrent = ['qbittorrent-api~=2025.2']
telegram = ['python-telegram-bot[http2,socks]~=21.9']
transmission = ['transmission-rpc~=7.0']
# This is all our optional deps installable via extras. Not actually 'all'
all = [
    { include-group = "deluge" },
    { include-group = "qbittorrent" },
    { include-group = "telegram" },
    { include-group = "transmission" }
]
[project.urls]
"Homepage" = "https://flexget.com"
"Issue Tracker" = "https://github.com/Flexget/Flexget/issues"
"Repository" = "https://github.com/Flexget/Flexget"
"Forum" = "https://github.com/Flexget/Flexget/discussions"

[project.scripts]
flexget = "flexget:main"

[project.gui-scripts]
flexget-headless = "flexget:main"  # This is useful on Windows to avoid a cmd popup

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata.hooks.custom]
# Extras with locked dependencies will be generated if BUILD_LOCKED env variable is specified
path = "build_locked_extras.py"
locked-groups = ["deluge", "qbittorrent", "telegram", "transmission", "all"]

[tool.hatch.version]
path = "flexget/_version.py"

[tool.hatch.build]
skip-excluded-dirs = true

[tool.hatch.build.targets.sdist]
include = [
    "/flexget",
    "/*.py"
]
# Cassettes will take up all our room on pypi faster
exclude = ["/flexget/tests/cassettes"]

[tool.hatch.build.targets.wheel.hooks.custom]
# The webui will be bundled when the BUNDLE_WEBUI env variable is defined
path = "bundle_webui.py"

[tool.hatch.build.targets.wheel]
include = [
    "/flexget"
]
exclude = ["/flexget/tests"]

## Other tool settings

[tool.pytest.ini_options]
addopts = '-p no:legacypath --strict-markers'
markers = [
    'filecopy(src, dst): mark test to copy a file from `src` to `dst` before running',
    'online: mark test that goes online. VCR will automatically be used.',
    'require_optional_deps: mark test as requiring additional dependencies'
]
testpaths = ["flexget/tests"]

[tool.ruff]
line-length = 99
extend-exclude = ["flexget/ui"]

[tool.ruff.lint]
select = [
    "ASYNC",
    "B",
    "C4",
    "D",
    "E",
    "EXE",
    "F",
    "FLY",
    "FURB",
    "G",
    "I",
    "ICN",
    "ISC",
    "LOG",
    "N",
    "PERF",
    "PGH",
    "PIE",
    "PL",
    "PT",
    "PYI",
    "RET",
    "RSE",
    "RUF",
    "SIM",
    "SLOT",
    "T10",
    "TC",
    "TCH",
    "TD",
    "TID",
    "TRY",
    "UP",
    "W",
    "YTT",
]
ignore = [
    "B904", # TODO: enable this rule (requires a lot of manual work)
    "D1", # Missing docstring
    "E501", # TODO: enable this rule (requires a lot of manual work)
    "N817", # camelcase-imported-as-acronym
    "N818", # error-suffix-on-exception-name
    "PERF203", # TODO: remove this after Python 3.10 is dropped
    "PLE1205", # Maybe can re-enable after https://github.com/astral-sh/ruff/issues/13390
    "PLR0911", # too-many-return-statements
    "PLR0912", # too-many-branches
    "PLR0913", # too-many-arguments
    "PLR0915", # too-many-statements
    "PLR1704", # redefined-argument-from-local
    "PLR2004", # magic-value-comparison
    "PLW0603", # global-statement
    "PLW0642", # self-or-cls-assignment
    "PLW2901", # redefined-loop-name
    "RUF012", # Maybe can re-enable after https://github.com/astral-sh/ruff/issues/5243
    "TD002", # missing-todo-author
    "TD003", # missing-todo-link
    "TRY003", # raise-vanilla-args
    "TRY400", # error-instead-of-exception
]

[tool.ruff.lint.isort]
known-first-party = ['flexget']

[tool.ruff.format]
quote-style = "preserve"
