[pytest]
testpaths = tests
addopts = --log-format "%(filename)-25s %(lineno)4d %(levelname)-8s %(name)-13s %(task)-15s %(message)s"

verbosity = 0
detailed-errors = 1

# logging during tests
quiet = 1
logging-config = tests/logging.cfg

[metadata]
license-file = LICENSE

[pep8]
ignore = E711,E712,W291,W293,E261,E128
max-line-length = 120

[flake8]
ignore = E711,E712,W291,W293,E261,E128
max-line-length = 120

[bdist_wheel]
python-tag = py2

[build_sphinx]
source-dir = docs/
build-dir = build/sphinx
all_files = 1
