[metadata]
license-file = LICENSE

[pep8]
ignore = E711,E712,W291,W293,E261,E128
max-line-length = 120

[flake8]
ignore = E711,E712,W291,W293,E261,E128
max-line-length = 120

[bdist_wheel]
python-tag = py27

[build_sphinx]
source-dir = docs/
build-dir = build/sphinx
all_files = 1

[pytest]
testpaths = tests

[aliases]
test = pytest
