[metadata]
license-file = LICENSE

[pycodestyle]
ignore = E711,E712,W291,W293,E261,E128
max-line-length = 99

[flake8]
ignore = E711,E712,W291,W293,E261,E128
max-line-length = 99

[bdist_wheel]
universal=1

[build_sphinx]
source-dir = docs/
build-dir = build/sphinx
all_files = 1

[tool:pytest]
testpaths = flexget/tests

[aliases]
test = pytest
